--- a/index.html
+++ b/index.html
@@ -5,12 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <input placeholder="Tags" type="text" class="IT">
-        <button class="btn">Click me</button>
-
-        <div class="holder">
-
-        </div>
+        <h1>Krono bot command help page</h1>
 
 
         <script src="js/script.js"></script>
