--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1>Krono bot command help page</h1>
+        <h1 class="t1">Krono bot command help page</h1>
 
 
         <script src="js/script.js"></script>
